# fmi-python-password-manager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/common/: config.py  encryption.py  exceptions.py  generators.py
src/logging/: logging.py
src/manager/: password_manager.py
src/ui/: entry.py  modals.py  style.tcss  ui.py  users.py  vault.py
src/user/: user_manager.py
tests/: test_encryption.py  test_generators.py  test_password_manager.py  test_user_manager.py
