[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmi-python-password-manager"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.1",
    "cryptography>=42.0.0",
    "pyperclip>=1.8.2",
    "rich>=13.0.0",
    "platformdirs>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "types-pyperclip"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
